crates/biome_cli/tests/snapshots/main_commands_check/all_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": { "all": true }
  }
}
```

## `fix.js`

```js

(1 >= -0)

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
fix.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - (1·>=·-0)
      1 │ + 1·>=·-0;
    3 2 │   
  

```

```block
fix.js:2:2 lint/suspicious/noCompareNegZero  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Do not use the >= operator to compare against -0.
  
  > 2 │ (1 >= -0)
      │  ^^^^^^^
    3 │ 
  
  i Safe fix: Replace -0 with 0
  
    2 │ (1·>=·-0)
      │       -  

```

```block
Checked 1 file in <TIME>. No fixes needed.
Found 2 errors.
```
