crates/biome_cli/tests/snapshots/main_commands_check/applies_organize_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write check.js
```

## `biome.json`

```json
{ "linter": { "enabled": false }, "assist": { "enabled": true } }
```

## `check.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
