crates/biome_cli/tests/snapshots/main_commands_check/applies_organize_imports_bug_4552.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check index.ts
```

## `biome.json`

```json
{
  "assist": {
    "enabled": true,
    "includes": ["**", "!index.ts"]
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended",
      "correctness": { "noUnusedImports": "off" }
    }
  }
}
```

## `index.ts`

```ts
import { secondFunction, firstFunction } from "./import";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
