crates/biome_cli/tests/snapshots/main_commands_check/applies_organize_imports_from_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --formatter-enabled=false --linter-enabled=false --assist-enabled=true check.js
```

## `check.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
