crates/biome_cli/tests/snapshots/main_commands_check/apply_suggested_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --unsafe --write fix.js
```

## `fix.js`

```js
const a = 4;
console.log(a);

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
